[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource(1)

[node name="TopPanel" type="Panel" parent="."]
anchor_right = 0.4
anchor_bottom = 0.22
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="TopContent" type="HBoxContainer" parent="TopPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 20

[node name="LogoRect" type="ColorRect" parent="TopPanel/TopContent"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
color = Color(0.9, 0.6, 0.2, 1)

[node name="InfoVBox" type="VBoxContainer" parent="TopPanel/TopContent"]
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="CompanyLabel" type="Label" parent="TopPanel/TopContent/InfoVBox"]
unique_name_in_owner = true
text = "Firma"
add_theme_font_size_override("font_size", 24)

[node name="DayLabel" type="Label" parent="TopPanel/TopContent/InfoVBox"]
unique_name_in_owner = true
text = "Tag 1"

[node name="FundsLabel" type="Label" parent="TopPanel/TopContent/InfoVBox"]
unique_name_in_owner = true
text = "Konto: 0 â‚¬"

[node name="ReputationLabel" type="Label" parent="TopPanel/TopContent/InfoVBox"]
unique_name_in_owner = true
text = "Reputation: 0 %"

[node name="ShipmentPanel" type="Panel" parent="."]
anchor_left = 0.6
anchor_right = 0.98
anchor_bottom = 0.6
margin_left = -20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 20.0

[node name="ShipmentVBox" type="VBoxContainer" parent="ShipmentPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="ShipmentTitle" type="Label" parent="ShipmentPanel/ShipmentVBox"]
text = "Aktive Sendungen"
add_theme_font_size_override("font_size", 20)

[node name="ShipmentList" type="ItemList" parent="ShipmentPanel/ShipmentVBox"]
unique_name_in_owner = true
size_flags_vertical = 3

[node name="ReportPanel" type="Panel" parent="."]
anchor_left = 0.02
anchor_top = 0.26
anchor_right = 0.58
anchor_bottom = 0.98
margin_left = 20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = -20.0

[node name="ReportVBox" type="VBoxContainer" parent="ReportPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="ReportTitle" type="Label" parent="ReportPanel/ReportVBox"]
text = "Tagesbericht"
add_theme_font_size_override("font_size", 20)

[node name="ReportText" type="RichTextLabel" parent="ReportPanel/ReportVBox"]
unique_name_in_owner = true
size_flags_vertical = 3
fit_content_height = true
scroll_active = true
